# template

./: .gitignore  pyproject.toml
conditional_neighbors/: dataset_mod.py  embed.py  main.py  run_embed.sh  run_main.sh
finetuning/: models.py  run.sh  train.py  utils.py
finetuning/configs/: base.yaml  bt_disc_ft.yaml  bt_disc_ft_freeze1-3.yaml  bt_disc_ft_linear_eval.yaml  bt_ft.yaml  bt_ft_freeze1-3.yaml  bt_ft_linear_eval.yaml  dann_scratch.yaml  debug.yaml  imagenet_ft.yaml  imagenet_ft_freeze1-3.yaml  imagenet_linear_eval.yaml  scratch.yaml
notebooks/: augmentations.ipynb  camelyon_dataset_mod.ipynb  chamelyon_testbench.ipynb  conditional_neighbors.ipynb  dataset_benchmark.ipynb  domain_prediction.ipynb  early_dann.ipynb  full_ds.ipynb  logistic_regression.ipynb  mnist_tsne.ipynb  pacs_dataset.py  pacs_h5_dataset.py  resnet18.ipynb  sanity_check.ipynb  simple_cnn.ipynb  simple_cnn2.ipynb  utils.py
pretraining/: model.py  run_iwild.sh  train.py  utils.py
pretraining/configs/: base.yaml  debug.yaml  pacs.yaml  rxrx1.yaml
pretraining/data_modules/: pacs_dataset.py  pacs_dm.py  pacs_h5_dataset.py  rxrx1_dm.py
pretraining/run/: run_camelyon.sh  run_pacs.sh
template/: model.py  train.py
template/configs/: base.yaml  camelyon-baseline.yaml  camelyon-color-aug-dann.yaml  camelyon-color-aug-mixstyle.yaml  camelyon-color-aug.yaml  camelyon-dann-decorr.yaml  camelyon-dann.yaml  camelyon-mixstyle-dann.yaml  camelyon-mixstyle.yaml  camelyon-no-no-color.yaml  camelyon-no-no-mix.yaml  camelyon-no-no-none.yaml  camelyon-no-yes-color.yaml  camelyon-no-yes-mix.yaml  (+13 more)
(+11 files in other folders)
